--- a/labs/lab01Rich.Rmd
+++ b/labs/lab01Rich.Rmd
@@ -2,7 +2,7 @@
 title: "Lab 1"
 author: "Richard Romano"
 output: pdf_document
-date: "11:59PM February 8, 2020"
+date: "11:59PM February 8, 2020" 
 ---
 
 You should have RStudio installed to edit this file. You will write code in places marked "TO-DO" to complete the problems. Some of this will be a pure programming assignment. The tools for the solutions to these problems can be found in the class practice lectures. I want you to use the methods I taught you, not for you to google and come up with whatever works. You won't learn that way.
@@ -14,6 +14,7 @@ To "hand in" the homework, you should compile or publish this file into a PDF th
 ```{r}
 options(decimal = 10)
 pi
+# options digits did not give ten digits after decimal. corrected in TA office hours
 ```
 
 * Sum up the first 100 terms of the series 1 + 1/2 + 1/4 + 1/8 + ...
@@ -32,24 +33,24 @@ prod(1 / seq(3, 60, by = 3))
 * Find the product of the first 500 terms of `1 * 1/2 * 1/4 * 1/8 *` ...
 
 ```{r}
-prod(1/2^(0:499))
+prod(1 / 2^(0:499))
 ```
 
 Is this answer *exactly* correct? 
 
-no because floating point error. discussed in class
+No because of floating point error. discussed in class
 
 
 * Figure out a means to express the answer more exactly. Not compute exactly, but express more exactly.
 
 ```{r}
-sum(log(1/2^(0:499)))
+sum(log(1 / 2^(0:499)))
 ```
 
 * Create the sequence `x = [Inf, 20, 18, ..., -20]`.
 
 ```{r}
-x = c(Inf,seq(from = 20,to = -20, by = -2))
+x = c(Inf, seq(from = 20,to = -20, by = -2))
 ```
 
 Create the sequence `x = [log_3(Inf), log_3(100), log_3(98), ... log_3(-20)]`.
@@ -66,17 +67,18 @@ NaN come from log(-number). Inf comes from log(Inf) and -Inf comes from log(0).
 * Create a vector of booleans where the entry is true if `x[i]` is positive and finite.
 
 ```{r}
-is_positive_real = (x > 0) & (x < Inf) & (!is.nan(x))
+is_positive_real = (x > 0) & (x != Inf) & (!is.nan(x))
+is_positive_real
 ```
 
 * Locate the indices of the non-real numbers in this vector. Hint: use the `which` function.
 
 ```{r}
 x
-which(!is_positive_real)
+which(!is_positive_real) 
 
 ```
-
+ 
 * Locate the indices of the infinite quantities in this vector. Hint: use the `which` function.
 
 ```{r}
@@ -147,38 +149,41 @@ mean(sample(c(0,1)), size = 500, replace = TRUE, prob = c(.1, .9))
 
 * Calculate the average of 1000 realizations of Bernoullis with p = 0.9 in one line using `rbinom`.
 
+*** this one was saved for lab 2
 ``` {r}
-bern = rbinom(1000, 1, 0.9)
-mean(bern)
+# this problem was saved for lab 2
 ``` 
 
 * Use the `strsplit` function and `sample` to put the sentences below in random order.
-
+*** this problem was also moved to lab 2 by teacher.
 ```{r}
 lorem = "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi posuere varius volutpat. Morbi faucibus ligula id massa ultricies viverra. Donec vehicula sagittis nisi non semper. Donec at tempor erat. Integer dapibus mi lectus, eu posuere arcu ultricies in. Cras suscipit id nibh lacinia elementum. Curabitur est augue, congue eget quam in, scelerisque semper magna. Aenean nulla ante, iaculis sed vehicula ac, finibus vel arcu. Mauris at sodales augue. "
 
-
+#repeating message here, professor told class not to do this problem
 ```
 
 * In class we considered a variable `x_3` which measured "criminality". We imagined L = 4 levels "none", "infraction", "misdimeanor" and "felony". Create a variable `x3` here with 100 random elements (equally probable). Create it as a nominal (i.e. unordered) factor.
 
 ```{r}
-x_3 = sample(4, 100, replace = TRUE, prob = c(.25,.25,.25,.25))
-factor(x_3, labels = c("none", "infraction", "misdeamoner", "felony"))
+x_3 = c("none", "infraction", "misdimeanor", "felony")
+x3 = factor(sample(x_3, 100, replace = TRUE), levels = x_3, exclude = NA, ordered = FALSE, nmax = NA)
+x3
+# exclude = NA and nmax = NA not needed, added in to follow basic syntax shown in ?factor. This was done to simply get used to syntax and basics of functions. 
 ```
 
 * Use `x_3` to create `x_3_bin`, a binary feature where 0 is no crime and 1 is any crime.
 
 ```{r}
-x_3_bin = as.numeric(x_3)
-ifelse(as.numeric(x_3 > 1), print(1), print(0))
-
+x_3_bin = as.numeric(x3 != "none")
+x_3_bin 
+#updated code. previous code was with ifelse. produced correct code, but did not store variables correctly. this one works better, approved by professor in lab.
 ```
 
 * Use `x_3` to create `x_3_ord`, an ordered, nominal factor variable. Ensure the proper ordinal ordering.
 
 ```{r}
-x_3_ord = ordered(x_3 , levels = c("none", "infraction", "misdemanor", "felony"), exclude = NA)
+x_3_ord = ordered(x_3 , levels = x_3, exclude = NA)
 x_3_ord
+# factor or ordered will work. Used ordered to get familiar with different functions. Professor saw and approved.
 ```
 
